# python-project-lvl4

./: .gitignore  MakeFile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
templates/task_manager/: index.html
