[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evgenii T"]
packages = [
 { include = 'task_manager' },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.7"
gunicorn = "^20.0.4"
python-dotenv = "^0.15.0"
django-bootstrap4 = "^2.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest = "^6.2.2"
coverage = "^5.5"
pytest-cov = "^2.11.1"
dj-database-url = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
